@@ -25,7 +25,7 @@ libxine_la_SOURCES = xine.c metronom.c configfile.c buffer.c \
 	audio_decoder.c video_out.c audio_out.c resample.c events.c \
 	video_overlay.c osd.c scratch.c demux.c vo_scale.c \
 	xine_interface.c post.c tvmode.c broadcaster.c io_helper.c \
-	input_rip.c info_helper.c refcounter.c
+	input_rip.c input_cache.c info_helper.c refcounter.c
 
 # FIXME: these are currently unused:
 EXTRA_DIST = lrb.c lrb.h accel_xvmc.h
